--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
   width: 1500px;
   background-color: antiquewhite;
+  margin: 0;
 }
 
 .layout {
@@ -77,10 +78,10 @@ body {
 }
 
 .new-item-list {
-  width: 100%;
-  height: 400px;
+  width: 1500px;
   list-style: none;
   display: flex;
+  margin-left: 200px;
 }
 
 .new-item {
@@ -94,8 +95,12 @@ body {
   margin-right: 100px;
 }
 
+.new-item:last-child {
+  margin-right: 0;
+}
+
 .new-item a {
-  width: 100%;
+  width: 250px;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -106,6 +111,28 @@ body {
 
 .new-item img {
   background-color: aquamarine;
-  width: 100%;
+  width: 250px;
   height: 400px;
+}
+
+.carousel-container {
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+}
+
+.fi {
+  position: absolute;
+  font-size: 40px;
+  color: saddlebrown;
+  cursor: pointer;
+  padding: 10px 20px;
+}
+
+.fi-rr-arrow-left {
+  left: 10px;
+}
+
+.fi-rr-arrow-right {
+  right: 10px;
 }
