--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 
 .menu {
   flex: 1;
-  /* Adjust flex as needed for the menu */
+  position: relative;
 }
 
 input[id="menuicon"] {
@@ -22,48 +22,67 @@ input[id="menuicon"] {
 }
 
 input[id="menuicon"] + label {
-  display: none;
+  display: block;
   width: 60px;
   height: 40px;
-  position: relative;
+  position: absolute;
+  top: 50%;
+  left: 10px;
+  transform: translate(0, -50%);
   cursor: pointer;
+  z-index: 2;
 }
 
-input[id="menuicon"] + label + span {
+input[id="menuicon"] + label span {
   display: block;
   position: absolute;
   width: 100%;
   height: 5px;
   border-radius: 30px;
-  background-color: #000;
+  background-color: #fff;
   transition: all 0.35s;
 }
 
-input[id="menuicon"] + label + span:nth-child(1) {
+input[id="menuicon"] + label span:nth-child(1) {
   top: 0;
 }
 
-input[id="menuicon"] + label + span:nth-child(2) {
+input[id="menuicon"] + label span:nth-child(2) {
   top: 50%;
   transform: translateY(-50%);
 }
 
-input[id="menuicon"] + label + span:nth-child(3) {
+input[id="menuicon"] + label span:nth-child(3) {
   bottom: 0;
 }
 
-input[id="menuicon"]:checked + label + span:nth-child(1) {
+input[id="menuicon"]:checked + label span:nth-child(1) {
   top: 50%;
   transform: translateY(-50%) rotate(45deg);
 }
 
-input[id="menuicon"]:checked + label + span:nth-child(2) {
+input[id="menuicon"]:checked + label span:nth-child(2) {
   opacity: 0;
 }
 
-input[id="menuicon"]:checked + label + span:nth-child(3) {
+input[id="menuicon"]:checked + label span:nth-child(3) {
   bottom: 50%;
   transform: translateY(50%) rotate(-45deg);
+}
+
+.sidebar {
+  width: 250px;
+  height: 80%;
+  background: #222;
+  position: fixed;
+  top: 0;
+  left: -300px;
+  z-index: 1;
+  transition: all 0.35s;
+}
+
+input[id="menuicon"]:checked + label + div {
+  left: 0;
 }
 
 .logo {
