--- a/product.css
+++ b/product.css
@@ -136,6 +136,11 @@ input[id="menuicon"]:checked + label + div {
 .logo {
   flex: 2;
   /* Adjust flex as needed for the logo */
+  text-decoration: none;
+}
+
+.logo a {
+  text-decoration: none;
 }
 
 .search-box {
@@ -174,11 +179,11 @@ input[id="menuicon"]:checked + label + div {
 .banner-image {
   max-width: 100%;
   height: auto;
-  min-height: 600px;
 }
 
 .bannerImage {
   width: 100%;
+  height: 80%;
 }
 
 .new-title {
