회원가입 로그인 분리

--- a/style.css
+++ b/style.css
@@ -171,6 +171,10 @@ input[id="menuicon"]:checked + label + div {
   text-decoration: none;
 }
 
+form {
+  text-align: center;
+}
+
 .event-banner {
   display: flex;
 }
