--- a/style.css
+++ b/style.css
@@ -189,6 +189,24 @@ form {
   width: 100%;
 }
 
+.weatherBanner {
+  position: absolute;
+  background-color: deepskyblue;
+  width: 300px;
+  height: 180px;
+  right: 100px;
+  bottom: -30px;
+  text-align: center;
+}
+
+.weatherInner {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+}
+
 .new-title {
   display: flex;
   padding: 40px 50px;
