--- a/style.css
+++ b/style.css
@@ -194,9 +194,20 @@ form {
   background-color: deepskyblue;
   width: 300px;
   height: 180px;
-  right: 100px;
+  right: 0;
   bottom: -30px;
   text-align: center;
+  animation: slide 1s;
+}
+
+@keyframes slide {
+  from {
+    right: 0;
+  }
+
+  to {
+    right: 100px;
+  }
 }
 
 .weatherInner {
