--- a/style.css
+++ b/style.css
@@ -197,7 +197,7 @@ form {
   right: 0;
   bottom: -30px;
   text-align: center;
-  animation: slide 1s;
+  animation: slide 1s forwards;
 }
 
 @keyframes slide {
